--- a/missionplanning/missionplanning-api/src/main/resources/bootstrap.yml
+++ b/missionplanning/missionplanning-api/src/main/resources/bootstrap.yml
@@ -3,22 +3,22 @@ server:
 
 spring:
   application:
-    name: jouav-cloud-mission-planning
-  cloud:
-    inetutils:
-      preferred-networks:
-        - 172.30.30 #局域网调试时可使用此配置
+    name: cloud-mission-planning
+#  cloud:
+#    inetutils:
+#      preferred-networks:
+#        - 172.30.30 #局域网调试时可使用此配置
     nacos:
       discovery:
         server-addr: 121.36.18.64:8888 #服务注册中心地址
-        namespace: jouav-guangxi-dev
+        namespace: jouav-weiran
         username: nacos
         password: Jouav1234
 #        ip: 119.3.189.81 #服务所在服务器ip（一般线上服务器使用此配置）
       config:
         server-addr: 121.36.18.64:8888 #配置中心地址
         file-extension: yaml #指定yaml格式的配置
-        namespace: jouav-guangxi-dev
+        namespace: jouav-weiran
         username: nacos
         password: Jouav1234
 
