--- a/studentmanager/src/main/resources/application.yml
+++ b/studentmanager/src/main/resources/application.yml
@@ -20,6 +20,8 @@ sa-token:
   is-log: false
 
 spring:
+  profiles:
+    active: weiran
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://127.0.0.1:3306/test?setUnicode=true&characterEncoding=utf8&useAffectedRows=true
