--- a/weiran-gateway/src/main/resources/application.yml
+++ b/weiran-gateway/src/main/resources/application.yml
@@ -1,3 +1,8 @@
 spring:
   profiles:
     active: weiran
+  datasource:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://127.0.0.1:3306/test?setUnicode=true&characterEncoding=utf8&useAffectedRows=true
+    username: root
+    password: sun8100512
