--- a/weiran-gateway/src/main/resources/bootstrap.properties
+++ b/weiran-gateway/src/main/resources/bootstrap.properties
@@ -1,6 +1,6 @@
 server.port=8901
 
-spring.application.name=cloud-gateway
+spring.application.name=jouav-cloud-gateway
 
 spring.cloud.nacos.discovery.server-addr=121.36.18.64:8888
 spring.cloud.nacos.discovery.namespace=jouav-weiran
