--- a/studentmanager/src/main/resources/application.yml
+++ b/studentmanager/src/main/resources/application.yml
@@ -2,6 +2,57 @@
 server:
   port: 8080
 
+spring:
+  main:
+    # 一个启动时候的覆盖bug
+    allow-bean-definition-overriding: true
+  profiles:
+    active: weiran
+  datasource:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://127.0.0.1:3306/test?setUnicode=true&characterEncoding=utf8&useAffectedRows=true
+    username: root
+    password: sun8100512
+  thymeleaf:
+    cache: false
+  # redis Sa-token的框架集成，只需要引入maven依赖就可以了
+  redis:
+    # Redis数据库索引（默认为0）
+    database: 0
+    # Redis服务器地址
+    host: 127.0.0.1
+    # Redis服务器连接端口
+    port: 6379
+    # Redis服务器连接密码（默认为空）
+    password: 123456
+    # 连接超时时间（毫秒）
+    timeout: 5000
+    lettuce:
+      pool:
+        # 连接池最大连接数
+        max-active: 200
+        # 连接池最大阻塞等待时间（使用负值表示没有限制）
+        max-wait: -1ms
+        # 连接池中的最大空闲连接
+        max-idle: 10
+        # 连接池中的最小空闲连接
+        min-idle: 0
+
+#tx-lcn相关配置
+tx-lcn:
+  springcloud:
+    loadbalance:
+      enabled: true
+  client:
+    ## tx-manager 的配置地址，可以指定TM集群中的任何一个或多个地址
+    ## tx-manager 下集群策略，每个TC都会从始至终<断线重连>与TM集群保持集群大小个连接。
+    ## TM方，每有TM进入集群，会找到所有TC并通知其与新TM建立连接。
+    ## TC方，启动时按配置与集群建立连接，成功后，会再与集群协商，查询集群大小并保持与所有TM的连接
+    manager-address: 127.0.0.1:8207
+  #是否开启日志记录。当开启以后需要配置对应logger的数据库连接配置信息。
+  logger:
+    enabled: false
+
 # sa-token配置
 sa-token:
   # token名称 (同时也是cookie名称)
@@ -18,41 +69,6 @@ sa-token:
   token-style: uuid
   # 是否输出操作日志
   is-log: false
-
-spring:
-  profiles:
-    active: weiran
-  datasource:
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://127.0.0.1:3306/test?setUnicode=true&characterEncoding=utf8&useAffectedRows=true
-    username: root
-    password: sun8100512
-
-  thymeleaf:
-    cache: false
-
-  # redis Sa-token的框架集成，只需要引入maven依赖就可以了
-  redis:
-    # Redis数据库索引（默认为0）
-    database: 0
-    # Redis服务器地址
-    host: 127.0.0.1
-    # Redis服务器连接端口
-    port: 6379
-    # Redis服务器连接密码（默认为空）
-    password: 123456
-    # 连接超时时间（毫秒）
-    timeout: 10ms
-    lettuce:
-      pool:
-        # 连接池最大连接数
-        max-active: 200
-        # 连接池最大阻塞等待时间（使用负值表示没有限制）
-        max-wait: -1ms
-        # 连接池中的最大空闲连接
-        max-idle: 10
-        # 连接池中的最小空闲连接
-        min-idle: 0
 
 mybatis-plus:
   configuration:
@@ -72,5 +88,12 @@ mybatis-plus:
 #日志配置文件
 logging:
  config: classpath:logback.xml
+
+ swagger:
+   production: false
+   basic:
+     enable: true
+     username: weiran
+     password: weiran1234
 
 
