SSO,还有不小的问题

--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,8 @@
         <module>studentmanager</module>
         <module>weiran-txserver</module>
         <module>weiran-gateway</module>
+        <module>weiran-oauth2</module>
+        <module>weiran-sso</module>
     </modules>
 
     <groupId>com.weiran.cloud</groupId>
