--- a/missionplanning/missionplanning-api/pom.xml
+++ b/missionplanning/missionplanning-api/pom.xml
@@ -12,6 +12,7 @@
     <artifactId>missionplanning-api</artifactId>
 
     <dependencies>
+
         <dependency>
             <groupId>com.weiran.cloud</groupId>
             <artifactId>missionplanning-biz</artifactId>
@@ -20,13 +21,13 @@
         <dependency>
             <groupId>com.weiran.cloud</groupId>
             <artifactId>weiran-common</artifactId>
-            <version>1.0.0</version>
+            <version>1.0-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>com.weiran.cloud</groupId>
             <artifactId>weiran-common</artifactId>
-            <version>1.0.0</version>
+            <version>1.0-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
