--- a/missionplanning/missionplanning-biz/pom.xml
+++ b/missionplanning/missionplanning-biz/pom.xml
@@ -15,7 +15,7 @@
         <dependency>
             <groupId>com.weiran.cloud</groupId>
             <artifactId>weiran-common</artifactId>
-            <version>1.0.0</version>
+            <version>1.0-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
     </dependencies>
