--- a/weiran-common/pom.xml
+++ b/weiran-common/pom.xml
@@ -10,7 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>weiran-common</artifactId>
-    <version>1.0.0</version>
+    <version>1.0-SNAPSHOT</version>
 
     <dependencies>
         <!--分布式事务-->
