--- a/weiran-gateway/pom.xml
+++ b/weiran-gateway/pom.xml
@@ -77,6 +77,16 @@
             <groupId>cn.dev33</groupId>
             <artifactId>sa-token-reactor-spring-boot-starter</artifactId>
         </dependency>
+        <!-- Sa-Token 整合 Redis-使用jackson序列化方式 (Redis包是必须的，因为我们需要和各个服务通过Redis来同步数据) -->
+        <dependency>
+            <groupId>cn.dev33</groupId>
+            <artifactId>sa-token-dao-redis-jackson</artifactId>
+            <version>1.26.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-pool2</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
