--- a/missionplanning/pom.xml
+++ b/missionplanning/pom.xml
@@ -33,6 +33,7 @@
         <dependency>
             <groupId>cn.dev33</groupId>
             <artifactId>sa-token-dao-redis-jackson</artifactId>
+            <version>1.26.0</version>
         </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
@@ -42,6 +43,7 @@
         <dependency>
             <groupId>cn.dev33</groupId>
             <artifactId>sa-token-alone-redis</artifactId>
+            <version>1.26.0</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
