--- a/weiran-oauth2/src/main/resources/application.yml
+++ b/weiran-oauth2/src/main/resources/application.yml
@@ -20,7 +20,7 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://127.0.0.1:3306/test?setUnicode=true&characterEncoding=utf8&useAffectedRows=true
     username: root
-    password: sun8100512
+    password: 123456
   # redis Sa-token的框架集成，只需要引入maven依赖就可以了
   redis:
     # Redis数据库索引（默认为0）
