--- a/.gitignore
+++ b/.gitignore
@@ -13,12 +13,15 @@ target/
 .springBeans
 .sts4-cache
 
+### log
+/log/
+
 ### IntelliJ IDEA ###
 .idea
 *.iws
 *.iml
 *.ipr
-.log
+
 ### NetBeans ###
 /nbproject/private/
 /nbbuild/
