--- a/weiran-gateway/pom.xml
+++ b/weiran-gateway/pom.xml
@@ -12,6 +12,17 @@
     <artifactId>weiran-gateway</artifactId>
 
     <dependencies>
+        <!--Mybaits数据库映射， 疑似bug所在-->
+        <dependency>
+            <groupId>org.mybatis.spring.boot</groupId>
+            <artifactId>mybatis-spring-boot-starter</artifactId>
+            <version>2.0.0</version>
+        </dependency>
+        <!--MYSQL连接器-->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+        </dependency>
         <!--nacos-->
         <dependency>
             <groupId>com.alibaba.cloud</groupId>
@@ -63,6 +74,7 @@
             <artifactId>sa-token-dao-redis-jackson</artifactId>
             <version>1.26.0</version>
         </dependency>
+        <!--redis-->
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-pool2</artifactId>
