--- a/weiran-gateway/src/main/resources/application.yml
+++ b/weiran-gateway/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
     active: weiran
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://127.0.0.1:3306/test?setUnicode=true&characterEncoding=utf8&useAffectedRows=true
+    url: jdbc:mysql://127.0.0.1:3306/test?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&serverTimezone=GMT%2B8&useSSL=false&allowPublicKeyRetrieval=true&autoReconnect=true&failOverReadOnly=false
     username: root
     password: 123456
   # redis Sa-token的框架集成，只需要引入maven依赖就可以了
