--- a/weiran-sso_A/pom.xml
+++ b/weiran-sso_A/pom.xml
@@ -12,6 +12,11 @@
     <artifactId>weiran-sso_A</artifactId>
 
     <dependencies>
+        <!--redis-->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-pool2</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
