--- a/weiran-sso_A/src/main/resources/application.yml
+++ b/weiran-sso_A/src/main/resources/application.yml
@@ -10,7 +10,7 @@ spring:
     active: weiran
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://127.0.0.1:3306/test?setUnicode=true&characterEncoding=utf8&useAffectedRows=true
+    url: jdbc:mysql://127.0.0.1:3306/test?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&serverTimezone=GMT%2B8&useSSL=false&allowPublicKeyRetrieval=true&autoReconnect=true&failOverReadOnly=false
     username: root
     password: 123456
   thymeleaf:
