--- a/studentmanager/pom.xml
+++ b/studentmanager/pom.xml
@@ -12,6 +12,12 @@
     <artifactId>studentmanager</artifactId>
 
     <dependencies>
+        <!--Elastic Agent相关依赖-->
+        <dependency>
+            <groupId>co.elastic.apm</groupId>
+            <artifactId>apm-agent-attach</artifactId>
+            <version>1.17.0</version>
+        </dependency>
         <!--redis-->
         <dependency>
             <groupId>org.apache.commons</groupId>
