--- a/weiran-stu/src/main/resources/application.yml
+++ b/weiran-stu/src/main/resources/application.yml
@@ -10,7 +10,7 @@ spring:
     active: weiran
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://127.0.0.1:3306/test?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&serverTimezone=GMT%2B8&useSSL=false&allowPublicKeyRetrieval=true&autoReconnect=true&failOverReadOnly=false
+    url: jdbc:mysql://127.0.0.1:3306/auth?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&serverTimezone=GMT%2B8&useSSL=false&allowPublicKeyRetrieval=true&autoReconnect=true&failOverReadOnly=false
     username: root
     password: 123456
   thymeleaf:
@@ -70,20 +70,9 @@ sa-token:
   # 是否输出操作日志
   is-log: false
 
+# 这个与依赖mybatis-plus-boot-starter对应，mybatis-plus依赖包则是mybatis.mapper-locations
 mybatis-plus:
-  configuration:
-    map-underscore-to-camel-case: true
-    auto-mapping-behavior: full
-    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
-  mapper-locations: classpath*:mapper/*Mapper.xml
-  type-aliases-package: com.weiran.studentmanager.mapper
-  global-config:
-    # 逻辑删除配置
-    db-config:
-      # 删除前
-      logic-not-delete-value: 0
-      # 删除后
-      logic-delete-value: 1
+  mapper-locations: classpath:mapper/*.xml
 
 #日志配置文件
 logging:
