--- a/weiran-mission/pom.xml
+++ b/weiran-mission/pom.xml
@@ -10,12 +10,12 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>missionplanning</artifactId>
+    <artifactId>weiran-mission</artifactId>
     <packaging>pom</packaging>
     <modules>
-        <module>missionplanning-api</module>
-        <module>missionplanning-biz</module>
-        <module>missionplanning-dal</module>
+        <module>weiran-mission-api</module>
+        <module>weiran-mission-biz</module>
+        <module>weiran-mission-dal</module>
     </modules>
 
 
