--- a/weiran-stu/pom.xml
+++ b/weiran-stu/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>studentmanager</artifactId>
+    <artifactId>weiran-stu</artifactId>
 
     <dependencies>
         <!--Hutool工具类-->
