Sleuth+zipkin、SpringBoot Admin集成

--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>weiran-mqtt</module>
         <module>weiran-stu</module>
         <module>weiran-mission</module>
+        <module>weiran-admin</module>
     </modules>
 
     <groupId>com.weiran.cloud</groupId>
