--- a/weiran-gateway/src/main/resources/bootstrap.properties
+++ b/weiran-gateway/src/main/resources/bootstrap.properties
@@ -1,17 +1,17 @@
 server.port=8901
 
-spring.application.name=jouav-cloud-gateway
+spring.application.name=weiran-cloud-gateway
 
 spring.cloud.nacos.discovery.server-addr=121.36.18.64:8888
-spring.cloud.nacos.discovery.namespace=jouav-weiran
+spring.cloud.nacos.discovery.namespace=weiran-weiran
 spring.cloud.nacos.discovery.username=nacos
-spring.cloud.nacos.discovery.password=Jouav1234
+spring.cloud.nacos.discovery.password=weiran1234
 
 spring.cloud.nacos.config.server-addr=121.36.18.64:8888
 spring.cloud.nacos.config.file-extension=yaml
-spring.cloud.nacos.config.namespace=jouav-weiran
+spring.cloud.nacos.config.namespace=weiran-weiran
 spring.cloud.nacos.config.username=nacos
-spring.cloud.nacos.config.password=Jouav1234
+spring.cloud.nacos.config.password=weiran1234
 
 management.endpoints.enabled-by-default=true
 # 开启监控端点
