--- a/weiran-txserver/src/main/resources/bootstrap.yml
+++ b/weiran-txserver/src/main/resources/bootstrap.yml
@@ -3,20 +3,20 @@ server:
 
 spring:
   application:
-    name: jouav-cloud-tx-lcn
+    name: weiran-cloud-tx-lcn
   cloud:
     nacos:
       discovery:
         server-addr: 121.36.18.64:8888 #服务注册中心地址
-        namespace: jouav-weiran
+        namespace:
         username: nacos
-        password: Jouav1234
+        password: nacos
       config:
         server-addr: 121.36.18.64:8888 #配置中心地址
         file-extension: properties #指定properties格式的配置
-        namespace: jouav-weiran
+        namespace:
         username: nacos
-        password: Jouav1234
+        password: nacos
 
 management:
   endpoints:
