--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <module>weiran-admin</module>
         <module>weiran-mission</module>
         <module>weiran-sentinel</module>
+        <module>weiran-rabbitmq</module>
     </modules>
 
     <groupId>com.weiran.cloud</groupId>
