--- a/weiran-mq/src/main/resources/application.yml
+++ b/weiran-mq/src/main/resources/application.yml
@@ -9,3 +9,8 @@ spring:
     password: guest
     # 全局消息确认消费默认
     listener.simple.acknowledge-mode: auto
+
+rocketmq:
+  name-server: 127.0.0.1:9876
+  producer:
+    group: seckill-producer-rocketmq-group
