feat: init graphql

--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>weiran-mission</module>
         <module>weiran-sentinel</module>
         <module>weiran-mq</module>
+        <module>weiran-graphql</module>
     </modules>
 
     <groupId>com.weiran.cloud</groupId>
