--- a/weiran-graphql/src/main/resources/application.yml
+++ b/weiran-graphql/src/main/resources/application.yml
@@ -1,5 +1,15 @@
-spring:
-  application:
-    name: weiran-graphql
 server:
   port: 8080
+
+spring:
+  application:
+    name: cloud-graphql
+  datasource:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/vehicle?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=Asia/Shanghai
+    username: root
+    password: 123456
+  jpa:
+    hibernate:
+      ddl-auto: update
+    database: mysql
